syntax = "proto3";

package api;
option go_package = "./pkg/api";

service URL {
    rpc ToShortLink(FullURL) returns (ShortURL) {}
    rpc ToFullLink(ShortURL) returns (FullURL) {}
}

message FullURL {
    string Value = 1;
}

message ShortURL {
    string Value = 1;
}

